@@ -1,6 +1,7 @@
 package com.jfc.owl.controller;
 
 import com.jfc.owl.dto.search.*;
+import com.jfc.owl.dto.search.SearchRequestDTO.SearchOptions;
 import com.jfc.owl.service.OWLKnowledgeBaseService;
 import com.jfc.owl.service.cache.SimilarityCacheService;
 import com.jfc.owl.service.mapper.SearchResultMapper;
@@ -19,9 +20,8 @@ import jakarta.validation.Valid;
 import jakarta.validation.constraints.NotBlank;
 import java.time.LocalDateTime;
 import java.util.*;
-import java.util.concurrent.CompletableFuture;
-import java.util.concurrent.ConcurrentHashMap;
-import java.util.concurrent.TimeUnit;
+import java.util.concurrent.*;
+import java.util.stream.Collectors;
 
 /**
  * REST Controller for Knowledge Base Search Operations
@@ -43,70 +43,232 @@ public class KnowledgeBaseSearchController extends AbstractDTOController<Object>
     @Autowired
     private SimilarityCacheService cacheService;
     
+    // Thread pool for search operations
+    private final ExecutorService searchExecutor = Executors.newFixedThreadPool(10);
+    
     // Store for tracking search progress
-    // In-memory progress tracking for searches
     private final Map<String, SearchProgressDTO> searchProgressTracker = new ConcurrentHashMap<>();
     
     // In-memory tracking for batch searches
     private final Map<String, BatchSearchStatusDTO> batchSearchTracker = new ConcurrentHashMap<>();
     
     /**
-     * Synchronous similarity search endpoint
+     * Health check endpoint
+     */
+    @GetMapping("/health")
+    public ResponseEntity<Map<String, Object>> healthCheck() {
+        Map<String, Object> health = new HashMap<>();
+        
+        try {
+            // Check if service is responsive
+            health.put("status", "UP");
+            health.put("timestamp", LocalDateTime.now());
+            
+            // Check knowledge base service
+            Map<String, Object> kbStats = knowledgeBaseService.getKnowledgeBaseStatistics();
+            health.put("knowledgeBase", Map.of(
+                "status", kbStats.get("status"),
+                "totalEntries", kbStats.get("totalEntries"),
+                "cacheSize", kbStats.get("cacheSize")
+            ));
+            
+            // Check cache service
+            Map<String, Long> cacheSizes = cacheService.getCacheSizes();
+            health.put("cache", Map.of(
+                "status", "UP",
+                "sizes", cacheSizes
+            ));
+            
+            // Thread pool status
+            if (searchExecutor instanceof ThreadPoolExecutor) {
+                ThreadPoolExecutor tpe = (ThreadPoolExecutor) searchExecutor;
+                health.put("threadPool", Map.of(
+                    "activeThreads", tpe.getActiveCount(),
+                    "poolSize", tpe.getPoolSize(),
+                    "queueSize", tpe.getQueue().size(),
+                    "completedTasks", tpe.getCompletedTaskCount()
+                ));
+            }
+            
+            // Active searches
+            health.put("activeSearches", searchProgressTracker.size());
+            health.put("activeBatchSearches", batchSearchTracker.size());
+            
+            return ResponseEntity.ok(health);
+            
+        } catch (Exception e) {
+            logger.error("Health check failed", e);
+            health.put("status", "DOWN");
+            health.put("error", e.getMessage());
+            return ResponseEntity.status(HttpStatus.SERVICE_UNAVAILABLE).body(health);
+        }
+    }
+    
+    /**
+     * Get search results by ID (for async search)
+     */
+    @GetMapping("/search-results/{searchId}")
+    public ResponseEntity<ApiResponse<SearchResultDTO>> getSearchResults(
+            @PathVariable @NotBlank String searchId) {
+        
+        // This would typically retrieve from a persistent store
+        // For now, return from progress tracker if available
+        SearchProgressDTO progress = searchProgressTracker.get(searchId);
+        
+        if (progress != null && progress.getPercentComplete() >= 100) {
+            // Search is complete, return results
+            // In a real implementation, you'd retrieve the actual results from storage
+            SearchResultDTO result = SearchResultDTO.builder()
+                .searchId(searchId)
+                .status(SearchResultDTO.SearchStatus.COMPLETED)
+                .totalResults(progress.getFoundMatches())
+                .build();
+            
+            return success(result);
+        } else if (progress != null) {
+            // Still processing
+            SearchResultDTO result = SearchResultDTO.builder()
+                .searchId(searchId)
+                .status(SearchResultDTO.SearchStatus.PROCESSING)
+                .progress(progress)
+                .build();
+            
+            return success(result);
+        } else {
+            return ResponseEntity.status(HttpStatus.NOT_FOUND)
+                .body(new ApiResponse<>(false, null, "Search not found: " + searchId, "404"));
+        }
+    }
+
+    /**
+     * Enhanced synchronous similarity search endpoint with timeout handling
      */
     @PostMapping("/search-similar")
     public ResponseEntity<ApiResponse<SearchResultDTO>> searchSimilarBOMs(
             @Valid @RequestBody SearchRequestDTO searchRequest) {
+        
+        String searchId = UUID.randomUUID().toString();
+        long startTime = System.currentTimeMillis();
         
         try {
             // Check cache first if enabled
             if (searchRequest.getEffectiveOptions().isUseCache()) {
                 SearchResultDTO cachedResult = cacheService.getCachedSearchResults(searchRequest.getSpecifications());
                 if (cachedResult != null) {
+                    logger.info("Returning cached results for search: {}", searchId);
+                    cachedResult.setSearchId(searchId);
                     return success(cachedResult);
                 }
             }
+            // Get the search type from the request
+            SearchRequestDTO.SearchType searchType = searchRequest.getEffectiveSearchType();
             
-            long startTime = System.currentTimeMillis();
-            List<Map<String, Object>> results = knowledgeBaseService.searchSimilarBOMs(
-                searchRequest.getSpecifications()
+            // Use CompletableFuture with timeout
+            /*
+            int timeoutSeconds = searchRequest.getEffectiveOptions().getTimeoutSeconds();
+            CompletableFuture<List<Map<String, Object>>> searchFuture = CompletableFuture.supplyAsync(() -> 
+                knowledgeBaseService.searchSimilarBOMs(searchRequest.getSpecifications(),
+                	    searchRequest.getOptions()),
+                searchExecutor
             );
             
+            List<Map<String, Object>> results;
+            try {
+                results = searchFuture.get(timeoutSeconds, TimeUnit.SECONDS);
+            } catch (TimeoutException e) {
+                logger.warn("Search timeout after {} seconds for searchId: {}", timeoutSeconds, searchId);
+                
+                // Cancel the search
+                searchFuture.cancel(true);
+                
+                // Return partial results if available
+                SearchResultDTO timeoutResult = searchResultMapper.createTimeoutResult(
+                    searchId,
+                    searchRequest.getSpecifications(),
+                    timeoutSeconds
+                );
+                
+                return ResponseEntity.status(HttpStatus.REQUEST_TIMEOUT)
+                    .body(new ApiResponse<>(false, timeoutResult, 
+                        "Search timeout after " + timeoutSeconds + " seconds", "408"));
+            }*/
+            
+         // 移除超時限制 - 直接調用服務方法
+            List<Map<String, Object>> results = knowledgeBaseService.searchSimilarBOMs(
+                searchRequest.getSpecifications(),
+                searchRequest.getOptions(), searchType
+            );
+            
+            // 添加日誌
+            logger.info("Raw search results count: {} for search type: {}", 
+                    results != null ? results.size() : 0, searchType);
+            
+            
+            // Build configuration
             SearchResultDTO.SearchConfiguration config = SearchResultDTO.SearchConfiguration.builder()
                 .maxResults(searchRequest.getEffectiveOptions().getMaxResults())
                 .minSimilarityScore(searchRequest.getEffectiveOptions().getMinSimilarityScore())
-                .timeoutSeconds(searchRequest.getEffectiveOptions().getTimeoutSeconds())
+                .timeoutSeconds(searchRequest.getEffectiveOptions().getTimeoutSeconds()) //.timeoutSeconds(timeoutSeconds)
                 .useCache(searchRequest.getEffectiveOptions().isUseCache())
                 .searchAlgorithm(searchRequest.getEffectiveSearchType().name())
                 .build();
             
+            // Map results
             SearchResultDTO resultDTO = searchResultMapper.toSearchResultDTO(
                 results, 
                 searchRequest.getSpecifications(), 
                 startTime,
                 config
             );
+            resultDTO.setSearchId(searchId);
+            
+            // add log
+            logger.info("Mapped SearchResultDTO - totalResults: {}, results size: {}", 
+                resultDTO.getTotalResults(), 
+                resultDTO.getResults() != null ? resultDTO.getResults().size() : 0);
+            
             
             // Cache the results
-            if (searchRequest.getEffectiveOptions().isUseCache()) {
+            if (searchRequest.getEffectiveOptions().isUseCache() && resultDTO.getTotalResults() > 0) {
                 cacheService.cacheSearchResults(searchRequest.getSpecifications(), resultDTO);
             }
             
+            logger.info("Search {} completed successfully in {} ms with {} results", 
+                searchId, resultDTO.getDurationMs(), resultDTO.getTotalResults());
+            
             return success(resultDTO);
             
-        } catch (Exception e) {
+        /*} catch  (InterruptedException e) {
+            Thread.currentThread().interrupt();
+            logger.error("Search interrupted for searchId: {}", searchId, e);
+            
             SearchResultDTO errorResult = searchResultMapper.createErrorResult(
-                UUID.randomUUID().toString(),
+                searchId,
+                searchRequest.getSpecifications(),
+                "Search interrupted",
+                e.getMessage()
+            );
+            
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
+                .body(new ApiResponse<>(false, errorResult, "Search interrupted", "500"));
+          */  
+        } catch (Exception e) {
+            logger.error("Search failed for searchId: {}", searchId, e);
+            
+            SearchResultDTO errorResult = searchResultMapper.createErrorResult(
+                searchId,
                 searchRequest.getSpecifications(),
                 "Search failed",
                 e.getMessage()
             );
+            
             return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
                 .body(new ApiResponse<>(false, errorResult, e.getMessage(), "500"));
         }
     }
     
     /**
-     * Asynchronous search endpoint
+     * Enhanced asynchronous search endpoint with better progress tracking
      */
     @PostMapping("/search-similar-async")
     public DeferredResult<ResponseEntity<ApiResponse<SearchResultDTO>>> searchSimilarBOMsAsync(
@@ -120,7 +282,7 @@ public class KnowledgeBaseSearchController extends AbstractDTOController<Object>
         
         // Initialize progress tracking
         SearchProgressDTO progress = SearchProgressDTO.builder()
-            .totalItems(0) // Will be updated during search
+            .totalItems(0)
             .processedItems(0)
             .foundMatches(0)
             .percentComplete(0.0)
@@ -129,13 +291,24 @@ public class KnowledgeBaseSearchController extends AbstractDTOController<Object>
             .build();
         searchProgressTracker.put(searchId, progress);
         
+        // Return search ID immediately
+        SearchResultDTO initialResult = SearchResultDTO.builder()
+            .searchId(searchId)
+            .status(SearchResultDTO.SearchStatus.PROCESSING)
+            .startTime(LocalDateTime.now())
+            .searchCriteria(searchRequest.getSpecifications())
+            .progress(progress)
+            .build();
+        
+        deferredResult.setResult(success(initialResult));
+        
         // Execute search asynchronously
-        CompletableFuture.supplyAsync(() -> {
+        CompletableFuture.runAsync(() -> {
             long startTime = System.currentTimeMillis();
             
             try {
-                // Update progress
-                progress.setCurrentPhase(SearchProgressDTO.ProcessingPhase.FILTERING);
+                // Update progress - Filtering phase
+                updateSearchProgress(searchId, SearchProgressDTO.ProcessingPhase.FILTERING, 10.0);
                 
                 // Check cache first
                 if (searchRequest.getEffectiveOptions().isUseCache()) {
@@ -144,22 +317,27 @@ public class KnowledgeBaseSearchController extends AbstractDTOController<Object>
                     );
                     if (cachedResult != null) {
                         cachedResult.setSearchId(searchId);
-                        return cachedResult;
+                        updateSearchProgress(searchId, SearchProgressDTO.ProcessingPhase.FINALIZING, 100.0);
+                        // Store result for retrieval
+                        storeSearchResult(searchId, cachedResult);
+                        return;
                     }
                 }
                 
-                // Perform actual search
-                progress.setCurrentPhase(SearchProgressDTO.ProcessingPhase.CALCULATING);
-                List<Map<String, Object>> results = knowledgeBaseService.searchSimilarBOMs(
-                    searchRequest.getSpecifications()
+                // Update progress - Calculating phase
+                updateSearchProgress(searchId, SearchProgressDTO.ProcessingPhase.CALCULATING, 30.0);
+             // Get search type
+                SearchRequestDTO.SearchType searchType = searchRequest.getEffectiveSearchType();
+                // Perform actual search with progress updates
+                List<Map<String, Object>> results = performSearchWithProgress(
+                    searchId, 
+                    searchRequest.getSpecifications(),
+                    searchRequest.getOptions(),  // 傳遞 options
+                    searchType  
                 );
                 
-                // Update progress
-                progress.setCurrentPhase(SearchProgressDTO.ProcessingPhase.SORTING);
-                progress.setTotalItems(results.size());
-                progress.setProcessedItems(results.size());
-                progress.setFoundMatches(results.size());
-                progress.setPercentComplete(100.0);
+                // Update progress - Sorting phase
+                updateSearchProgress(searchId, SearchProgressDTO.ProcessingPhase.SORTING, 80.0);
                 
                 // Create configuration
                 SearchResultDTO.SearchConfiguration config = SearchResultDTO.SearchConfiguration.builder()
@@ -180,59 +358,42 @@ public class KnowledgeBaseSearchController extends AbstractDTOController<Object>
                 resultDTO.setSearchId(searchId);
                 resultDTO.setProgress(progress);
                 
+                // Update progress - Finalizing
+                updateSearchProgress(searchId, SearchProgressDTO.ProcessingPhase.FINALIZING, 100.0);
+                progress.setFoundMatches(results.size());
+                
                 // Cache results if enabled
-                if (searchRequest.getEffectiveOptions().isUseCache()) {
+                if (searchRequest.getEffectiveOptions().isUseCache() && resultDTO.getTotalResults() > 0) {
                     cacheService.cacheSearchResults(searchRequest.getSpecifications(), resultDTO);
                 }
                 
-                return resultDTO;
+                // Store result for retrieval
+                storeSearchResult(searchId, resultDTO);
                 
             } catch (Exception e) {
-                progress.setCurrentPhase(SearchProgressDTO.ProcessingPhase.FINALIZING);
+                logger.error("Async search failed for searchId: {}", searchId, e);
                 progress.setWarningMessage("Search failed: " + e.getMessage());
                 
-                return searchResultMapper.createErrorResult(
+                SearchResultDTO errorResult = searchResultMapper.createErrorResult(
                     searchId,
                     searchRequest.getSpecifications(),
                     "Search failed",
                     e.getMessage()
                 );
+                
+                storeSearchResult(searchId, errorResult);
+            } finally {
+                // Clean up progress after delay
+                CompletableFuture.delayedExecutor(5, TimeUnit.MINUTES)
+                    .execute(() -> searchProgressTracker.remove(searchId));
             }
-        }).whenComplete((result, throwable) -> {
-            if (throwable != null) {
-                deferredResult.setResult(error("Search failed: " + throwable.getMessage()));
-            } else {
-                deferredResult.setResult(success(result));
-            }
-            
-            // Clean up progress after delay
-            CompletableFuture.delayedExecutor(5, TimeUnit.MINUTES)
-                .execute(() -> searchProgressTracker.remove(searchId));
-        });
+        }, searchExecutor);
         
         // Handle timeout
         deferredResult.onTimeout(() -> {
             progress.setWarningMessage("Search timed out");
-            SearchResultDTO timeoutResult = searchResultMapper.createErrorResult(
-                searchId,
-                searchRequest.getSpecifications(),
-                "Search timed out",
-                "The search operation exceeded the timeout limit of " + 
-                searchRequest.getEffectiveOptions().getTimeoutSeconds() + " seconds"
-            );
-            deferredResult.setResult(success(timeoutResult));
+            logger.warn("Async search timeout for searchId: {}", searchId);
         });
-        
-        // Return search ID immediately
-        SearchResultDTO initialResult = SearchResultDTO.builder()
-            .searchId(searchId)
-            .status(SearchResultDTO.SearchStatus.PROCESSING)
-            .startTime(LocalDateTime.now())
-            .searchCriteria(searchRequest.getSpecifications())
-            .progress(progress)
-            .build();
-        
-        deferredResult.setResult(success(initialResult));
         
         return deferredResult;
     }
@@ -247,6 +408,19 @@ public class KnowledgeBaseSearchController extends AbstractDTOController<Object>
         SearchProgressDTO progress = searchProgressTracker.get(searchId);
         
         if (progress != null) {
+            // Update elapsed time
+            if (progress.getPercentComplete() < 100) {
+                long currentTime = System.currentTimeMillis();
+                long startTime = currentTime - progress.getElapsedTimeMs();
+                progress.setElapsedTimeMs(currentTime - startTime);
+                
+                // Estimate remaining time
+                if (progress.getPercentComplete() > 0) {
+                    long estimatedTotal = (long) (progress.getElapsedTimeMs() / (progress.getPercentComplete() / 100.0));
+                    progress.setEstimatedRemainingMs(estimatedTotal - progress.getElapsedTimeMs());
+                }
+            }
+            
             return success(progress);
         } else {
             return ResponseEntity.status(HttpStatus.NOT_FOUND)
@@ -255,7 +429,7 @@ public class KnowledgeBaseSearchController extends AbstractDTOController<Object>
     }
     
     /**
-     * Batch search endpoint
+     * Enhanced batch search endpoint with better error handling
      */
     @PostMapping("/search-batch")
     public DeferredResult<ResponseEntity<ApiResponse<BatchSearchResponseDTO>>> searchBatch(
@@ -287,20 +461,47 @@ public class KnowledgeBaseSearchController extends AbstractDTOController<Object>
         // Process batch asynchronously
         CompletableFuture.supplyAsync(() -> {
             LocalDateTime startTime = LocalDateTime.now();
-            List<BatchSearchResponseDTO.BatchSearchResult> results = new ConcurrentHashMap<String, BatchSearchResponseDTO.BatchSearchResult>().values().stream().toList();
+            List<BatchSearchResponseDTO.BatchSearchResult> results = new ArrayList<>();
             
             if (batchRequest.isParallel()) {
-                // Process in parallel
-                results = batchRequest.getSearchItems().parallelStream()
-                    .map(item -> processSingleSearchItem(item, batchRequest.getCommonOptions()))
-                    .peek(result -> updateBatchProgress(batchId, result))
-                    .toList();
+                // Process in parallel with controlled concurrency
+                int parallelism = Math.min(batchRequest.getSearchItems().size(), 5);
+                ForkJoinPool customThreadPool = new ForkJoinPool(parallelism);
+                
+                try {
+                	Callable<List<BatchSearchResponseDTO.BatchSearchResult>> parallelTask = () ->
+                    batchRequest.getSearchItems().parallelStream()
+                        .map(item -> processSingleSearchItem(item, batchRequest.getCommonOptions(), batchId))
+                        .collect(Collectors.toList());
+                
+                    results = customThreadPool.submit(parallelTask).get();
+                } catch (Exception e) {
+                    logger.error("Parallel batch processing failed", e);
+                 // Re-throw or handle appropriately based on your requirements
+                    throw new RuntimeException("Batch processing failed", e);
+                } finally {
+                    customThreadPool.shutdown();
+                    try {
+                        // Wait for termination
+                        if (!customThreadPool.awaitTermination(60, TimeUnit.SECONDS)) {
+                            customThreadPool.shutdownNow();
+                            // Wait a bit for tasks to respond to being cancelled
+                            if (!customThreadPool.awaitTermination(60, TimeUnit.SECONDS)) {
+                                logger.error("ForkJoinPool did not terminate");
+                            }
+                        }
+                    } catch (InterruptedException ie) {
+                        // (Re-)Cancel if current thread also interrupted
+                        customThreadPool.shutdownNow();
+                        // Preserve interrupt status
+                        Thread.currentThread().interrupt();
+                    }
+                }
             } else {
                 // Process sequentially
                 results = batchRequest.getSearchItems().stream()
-                    .map(item -> processSingleSearchItem(item, batchRequest.getCommonOptions()))
-                    .peek(result -> updateBatchProgress(batchId, result))
-                    .toList();
+                    .map(item -> processSingleSearchItem(item, batchRequest.getCommonOptions(), batchId))
+                    .collect(Collectors.toList());
             }
             
             // Calculate summary
@@ -336,8 +537,9 @@ public class KnowledgeBaseSearchController extends AbstractDTOController<Object>
                 .durationMs(java.time.Duration.between(startTime, LocalDateTime.now()).toMillis())
                 .build();
             
-        }).whenComplete((result, throwable) -> {
+        }, searchExecutor).whenComplete((result, throwable) -> {
             if (throwable != null) {
+                logger.error("Batch search failed for batchId: {}", batchId, throwable);
                 deferredResult.setResult(error("Batch search failed: " + throwable.getMessage()));
             } else {
                 deferredResult.setResult(success(result));
@@ -373,38 +575,50 @@ public class KnowledgeBaseSearchController extends AbstractDTOController<Object>
      */
     @PostMapping("/cache/clear")
     public ResponseEntity<ApiResponse<Map<String, String>>> clearCache() {
-        cacheService.clearAllCaches();
-        return success(Map.of("message", "All caches cleared successfully"));
+        try {
+            cacheService.clearAllCaches();
+            logger.info("All caches cleared successfully");
+            return success(Map.of("message", "All caches cleared successfully"));
+        } catch (Exception e) {
+            logger.error("Failed to clear cache", e);
+            return error("Failed to clear cache: " + e.getMessage());
+        }
     }
     
     /**
      * Get cache statistics
-     * This method should replace the existing getCacheStats method in KnowledgeBaseSearchController
      */
     @GetMapping("/cache/stats")
     public ResponseEntity<ApiResponse<CacheStatsDTO>> getCacheStats() {
-        // Get individual cache statistics
-        Map<String, Map<String, Object>> cacheStatistics = cacheService.getCacheStatistics();
-        Map<String, Long> cacheSizes = cacheService.getCacheSizes();
-        
-        // Create aggregated statistics
-        CacheStatsDTO.CacheStatistics aggregatedStats = 
-            CacheStatsDTO.CacheStatistics.fromCacheStats(cacheStatistics, cacheSizes);
-        
-        // Build the DTO
-        CacheStatsDTO cacheStatsDTO = CacheStatsDTO.builder()
-            .statistics(aggregatedStats)
-            .sizes(cacheSizes)
-            .build();
-        
-        return success(cacheStatsDTO);
+        try {
+            // Get individual cache statistics
+            Map<String, Map<String, Object>> cacheStatistics = cacheService.getCacheStatistics();
+            Map<String, Long> cacheSizes = cacheService.getCacheSizes();
+            
+            // Create aggregated statistics
+            CacheStatsDTO.CacheStatistics aggregatedStats = 
+                CacheStatsDTO.CacheStatistics.fromCacheStats(cacheStatistics, cacheSizes);
+            
+            // Build the DTO
+            CacheStatsDTO cacheStatsDTO = CacheStatsDTO.builder()
+                .statistics(aggregatedStats)
+                .sizes(cacheSizes)
+                .build();
+            
+            return success(cacheStatsDTO);
+            
+        } catch (Exception e) {
+            logger.error("Failed to get cache stats", e);
+            return error("Failed to get cache stats: " + e.getMessage());
+        }
     }
     
     // Helper methods
     
     private BatchSearchResponseDTO.BatchSearchResult processSingleSearchItem(
             BatchSearchRequestDTO.SearchItem item,
-            SearchRequestDTO.SearchOptions commonOptions) {
+            SearchRequestDTO.SearchOptions commonOptions,
+            String batchId) {
         
         long itemStartTime = System.currentTimeMillis();
         
@@ -419,10 +633,19 @@ public class KnowledgeBaseSearchController extends AbstractDTOController<Object>
                 .options(effectiveOptions)
                 .build();
             
-            // Perform search
-            List<Map<String, Object>> results = knowledgeBaseService.searchSimilarBOMs(
-                searchRequest.getSpecifications()
+            // Perform search with timeout
+            CompletableFuture<List<Map<String, Object>>> searchFuture = CompletableFuture.supplyAsync(() ->
+                knowledgeBaseService.searchSimilarBOMs(searchRequest.getSpecifications(),
+                	    searchRequest.getOptions()),
+                searchExecutor
             );
+            
+            List<Map<String, Object>> results;
+            try {
+                results = searchFuture.get(effectiveOptions.getTimeoutSeconds(), TimeUnit.SECONDS);
+            } catch (TimeoutException e) {
+                throw new RuntimeException("Search timeout for item: " + item.getItemId());
+            }
             
             SearchResultDTO.SearchConfiguration config = SearchResultDTO.SearchConfiguration.builder()
                 .maxResults(effectiveOptions.getMaxResults())
@@ -436,6 +659,9 @@ public class KnowledgeBaseSearchController extends AbstractDTOController<Object>
                 config
             );
             
+            // Update batch progress
+            updateBatchProgress(batchId, searchResult.getError() == null);
+            
             return BatchSearchResponseDTO.BatchSearchResult.builder()
                 .itemId(item.getItemId())
                 .searchResult(searchResult)
@@ -444,6 +670,11 @@ public class KnowledgeBaseSearchController extends AbstractDTOController<Object>
                 .build();
                 
         } catch (Exception e) {
+            logger.error("Failed to process search item: {}", item.getItemId(), e);
+            
+            // Update batch progress
+            updateBatchProgress(batchId, false);
+            
             return BatchSearchResponseDTO.BatchSearchResult.builder()
                 .itemId(item.getItemId())
                 .error(e.getMessage())
@@ -453,13 +684,13 @@ public class KnowledgeBaseSearchController extends AbstractDTOController<Object>
         }
     }
     
-    private void updateBatchProgress(String batchId, BatchSearchResponseDTO.BatchSearchResult result) {
+    private void updateBatchProgress(String batchId, boolean success) {
         BatchSearchStatusDTO status = batchSearchTracker.get(batchId);
         if (status != null && status.getProgress() != null) {
             BatchSearchStatusDTO.BatchProgress progress = status.getProgress();
             progress.setProcessedItems(progress.getProcessedItems() + 1);
             
-            if (result.getError() == null) {
+            if (success) {
                 progress.setSuccessfulItems(progress.getSuccessfulItems() + 1);
             } else {
                 progress.setFailedItems(progress.getFailedItems() + 1);
@@ -468,7 +699,58 @@ public class KnowledgeBaseSearchController extends AbstractDTOController<Object>
             progress.setPercentComplete(
                 (double) progress.getProcessedItems() / progress.getTotalItems() * 100.0
             );
-            progress.setCurrentItem(result.getItemId());
+        }
+    }
+    
+    private void updateSearchProgress(String searchId, SearchProgressDTO.ProcessingPhase phase, double percentComplete) {
+        SearchProgressDTO progress = searchProgressTracker.get(searchId);
+        if (progress != null) {
+            progress.setCurrentPhase(phase);
+            progress.setPercentComplete(percentComplete);
+            progress.setElapsedTimeMs(System.currentTimeMillis());
+        }
+    }
+    
+    private List<Map<String, Object>> performSearchWithProgress(String searchId, 
+    		Map<String, String> specifications,
+            SearchOptions options,
+            SearchRequestDTO.SearchType searchType) {
+        // This is a simplified version - in reality, you'd integrate progress updates
+        // throughout the actual search process
+        List<Map<String, Object>> results = knowledgeBaseService.searchSimilarBOMs(
+        		specifications, 
+                options,  // 現在傳遞 options
+                searchType  // Pass the search type
+                );
+        
+        
+        SearchProgressDTO progress = searchProgressTracker.get(searchId);
+        if (progress != null) {
+            progress.setTotalItems(results.size());
+            progress.setProcessedItems(results.size());
+        }
+        
+        return results;
+    }
+    
+    private void storeSearchResult(String searchId, SearchResultDTO result) {
+        // In a real implementation, you'd store this in a persistent store
+        // For now, we'll just log it
+        logger.info("Search {} completed with status: {}", searchId, result.getStatus());
+    }
+    
+    // Cleanup on shutdown
+    @jakarta.annotation.PreDestroy
+    public void cleanup() {
+        logger.info("Shutting down search executor");
+        searchExecutor.shutdown();
+        try {
+            if (!searchExecutor.awaitTermination(30, TimeUnit.SECONDS)) {
+                searchExecutor.shutdownNow();
+            }
+        } catch (InterruptedException e) {
+            searchExecutor.shutdownNow();
+            Thread.currentThread().interrupt();
         }
     }
 }
